--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -25,8 +25,18 @@
                   </div>
                   <div class="cart-item" style="width:27vw;margin-left:-15px">
                       <ul >
-                          <li><a class='a' href="" style="width: 50%;text-align:center"><mat-icon style="font-size: 30px;display:inline-block;
-                            vertical-align: middle;line-height: normal;margin-bottom:13px ;">favorite</mat-icon></a></li>
+                        <li >
+                          <a *ngIf="non_auth()==false;else x5" class='a'    style="width: 50%;text-align:center"  (click)="redirect()"><mat-icon style="font-size: 30px;display:inline-block;cursor: pointer;
+                            vertical-align: middle;line-height: normal;margin-bottom:13px;" >favorite</mat-icon></a>
+                          <ng-template #x5>
+                          <a *ngIf="favorites(Produit)==true;else x2" class='a'  [ngStyle]="{'color':Produit.chrono_min }"  style="width: 50%;text-align:center"  (click)="dejaFavoris(Produit)"><mat-icon style="font-size: 30px;display:inline-block;cursor: pointer;
+                          vertical-align: middle;line-height: normal;margin-bottom:13px;" [ngStyle]="{'color':style1?'red':Produit.chrono_min }"  [ngClass]="{'notify':notify}">favorite</mat-icon></a>
+                          </ng-template>
+                          <ng-template #x2>
+                         <a class='a' [ngStyle]="{'color':Produit.chrono_min}"  style="width: 50%;text-align:center;"  (click)="ajouterFavoris(Produit)"><mat-icon style="font-size: 30px;display:inline-block;cursor: pointer;
+                            vertical-align: middle;line-height: normal;margin-bottom:13px;" [ngClass]="{'notify':notify}">favorite</mat-icon></a>
+                          </ng-template>
+                          </li>
                           <li><a class='b' href="" style="width: 50%;text-align:center"><mat-icon style="font-size: 30px;display:inline-block;
                             vertical-align: middle;line-height: normal;margin-bottom:13px ;">shopping_basket</mat-icon></a></li>
                       </ul>
