mon premier commit

--- a/src/app/admin/dialogue-ajouter-pr/dialogue-ajouter-pr.component.html
+++ b/src/app/admin/dialogue-ajouter-pr/dialogue-ajouter-pr.component.html
@@ -90,7 +90,8 @@
     <textarea matInput formControlName="description" ></textarea>
 </mat-form-field> 
 <div style="width: 35vw;text-align: right;">
-<button mat-raised-button mat-dialog-close  style="font-weight: bold;font-size: 20px;" type="submit">Ajouter</button>
+<button mat-raised-button  style="font-weight: bold;font-size: 20px;" type="submit">Ajouter</button>
+
 </div>
 </form>
 </div>
