--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -50,8 +50,8 @@
                             <mat-icon class="black-icon" id="personne">person_outline</mat-icon>
                         </a> -->
 
-                        <a routerLink="test" class="action">
-                            <mat-icon class="black-icon" matBadge="0" matBadgeColor="warn">mail_outline</mat-icon>
+                        <a  class="action">
+                            <mat-icon class="black-icon" matBadge={{y()}} [routerLink]="['/articlechrono']" matBadgeColor="warn">access_alarm</mat-icon> 
                             
                         </a>
 
