--- a/src/app/favoris/favoris.component.html
+++ b/src/app/favoris/favoris.component.html
@@ -2,12 +2,13 @@
 <br>
 
 <mat-grid-list cols="4" rowHeight="64vh" [gutterSize]="'20px'" style="width:92vw;margin-top: 35vh;margin-left: 4vw;">
-    <mat-grid-tile [ngStyle]="{'display':Produit.chrono_h }" *ngFor="let Produit of listeFavUserPr" style="width: 19vw;box-shadow: 0 5px 7px #dce1e1;padding: 0px;">
+    <mat-grid-tile  *ngFor="let Produit of listeFavUserPr" style="width: 19vw;box-shadow: 0 5px 7px #dce1e1;padding: 0px;">
         <mat-card   class="card"  style="width: 22vw;height:64vh;position: relative;" >
-            <mat-card-content>
+           <mat-card-content>
             <div class="image" style="position: relative;" >
                 <img mat-card-image style="height: 50vh;object-fit: cover;object-position: center top;" src="{{imageDirectorypath}}{{Produit.image1}}" alt="Photo of a Shiba Inu">
                  <div style="font-weight: bold;box-shadow: 0 2px 4px #dce1e1;position: absolute;top:7%;right: -8px;background-color: #dce1e1;opacity: 0.9;border-radius: 8px;padding: 2px;font-family: 'Oleo Script Swash Caps'">{{Produit.favorites.length}}  <mat-icon style="color: red;vertical-align: middle;" >favorite</mat-icon></div>           
+                 <div class="promo"  *ngIf="Produit.is_promo==1" ><p >Promotion</p></div>
                  <button mat-raised-button class="button1" >Voir Produit</button>
             </div>
             </mat-card-content>
